force-app/main/default/objects/VTXY_SubscriptionPlan__c/VTXY_SubscriptionPlan__c.object-meta.xml
<CustomObject>
    <description>Plan codes returned to subscriber sync</description>
    <label>Subscription Plan</label>
    <nameField>
        <label>Subscription Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>