force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/BaseFee__c.field-meta.xml
<CustomField>
    <fullName>BaseFee__c</fullName>
    <description>Base recurring fee.</description>
    <label>Base Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>