force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriod__c</fullName>
    <label>Billing Period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>