force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/Feature_JSON__c.field-meta.xml
<CustomField>
    <fullName>Feature_JSON__c</fullName>
    <description>Default features JSON</description>
    <label>Feature JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>