force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/HardStopDefault__c.field-meta.xml
<CustomField>
    <fullName>HardStopDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default hard-stop behavior.</description>
    <label>Hard Stop Default</label>
    <type>Checkbox</type>
</CustomField>