force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/Included_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Included_Numbers__c</fullName>
    <label>Included Numbers</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>