force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/IncludedMinutes__c.field-meta.xml
<CustomField>
    <fullName>IncludedMinutes__c</fullName>
    <description>Minutes included in plan period.</description>
    <label>Included Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>