force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/PerUserFee__c.field-meta.xml
<CustomField>
    <fullName>PerUserFee__c</fullName>
    <description>Per-user recurring fee.</description>
    <label>Per User Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>