force-app/main/default/objects/VTXY_SubscriptionPlan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Plan lifecycle</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>RETIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>